--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Hello from itucsdb1700!</h1>
+    <h2>This is going to be a wonderful project!</h2>
 
     <footer>
       <div id="datetime">{{ current_time }}</div>
