--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,7 @@
   <body>
     <h1>Hello from itucsdb1700!</h1>
     <h2>This is going to be a wonderful project!</h2>
+    <p>testing branch...</p>
 
     <footer>
       <div id="datetime">{{ current_time }}</div>
