--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
   </head>
   <body>
-    <h1>Hello, Flask!</h1>
+    <h1>Hello from itucsdb1700!</h1>
+    <h2>This is going to be a wonderful project!</h2>
+    <p>testing branch...</p>
+    <a href="{{ url_for('site.PropertyPage') }}">Click here to search your lost properties...</a>
 
     <footer>
       <div id="datetime">{{ current_time }}</div>
