--- a/templates/home.html
+++ b/templates/home.html
@@ -1,18 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Home</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
-  </head>
-  <body>
-    <h1>Hello from itucsdb1700!</h1>
-    <h2>This is going to be a wonderful project!</h2>
-    <p>testing branch...</p>
-    <a href="{{ url_for('site.PropertyPage') }}">Click here to search your lost properties...</a>
-
-    <footer>
-      <div id="datetime">{{ current_time }}</div>
-    </footer>
-  </body>
-</html>
+{% extends "layout.html" %}
+{% block title %} Home{% endblock %}
+{% block content %}
+    <h1>Welcome to my movie collection!</h1>
+{% endblock %}
