--- a/templates/house_announcement.html
+++ b/templates/house_announcement.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends "layout.html" %}
+{% block title %} Announcements{% endblock %}
+{% block content %}
+    <h1>Welcome to my movie collection!</h1>
+{% endblock %}
