--- a/templates/lost_properties.html
+++ b/templates/lost_properties.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-  </head>
-  <body>
-    <h1>Test page</h1>
-  </body>
-</html>
+{% extends "layout.html" %}
+{% block title %} Lost{% endblock %}
+{% block content %}
+    <h1>Welcome to my movie collection!</h1>
+{% endblock %}
