--- a/templates/yedekIndex.html
+++ b/templates/yedekIndex.html
@@ -23,14 +23,14 @@
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-    <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+    <a class="navbar-brand" href="yedekIndex.html">Start Bootstrap</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
-          <a class="nav-link" href="index.html">
+          <a class="nav-link" href="yedekIndex.html">
             <i class="fa fa-fw fa-dashboard"></i>
             <span class="nav-link-text">Dashboard</span>
           </a>
@@ -223,19 +223,27 @@
       </ul>
     </div>
   </nav>
+
+
+
+<!--Body-->
+  {% block content %}{% endblock %}
+
   <div class="content-wrapper">
     <div class="container-fluid">
       <!-- Breadcrumbs-->
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
-          <a href="index.html">Dashboard</a>
+          <a href="yedekIndex.html">Dashboard</a>
         </li>
         <li class="breadcrumb-item active">Blank Page</li>
       </ol>
       <div class="row">
         <div class="col-12">
+
           <h1>Blank</h1>
           <p>This is an example of a blank page that you can use as a starting point for creating new ones.</p>
+
         </div>
       </div>
     </div>
@@ -278,6 +286,8 @@
     <script src="{{ url_for('static', filename='js/sb-admin.min.js') }}"></script>
 
   </div>
+<!--Body-->
+
 </body>
 
 </html>
