--- a/templates/house_announcement.html
+++ b/templates/house_announcement.html
@@ -1,5 +1,112 @@
 {% extends "layout.html" %}
 {% block title %} Announcements{% endblock %}
 {% block content %}
-    <h1>Welcome to my movie collection!</h1>
-{% endblock %}
+    <div>
+        <script src="{{ url_for('static', filename='js/house_announcement/house_announcement.js') }}"></script>
+    </div>
+
+    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#ShareHouseModal">Share House</button>
+
+    <div class="modal fade" id="ShareHouseModal" role="dialog">
+        <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Share House</h4>
+                      </div>'
+                      <div class="modal-body">
+                        <form>
+                          <div class="form-group">
+                            <label for="InputLocation">Location</label>
+                            <input class="form-control" id="LocationOfNewHouse" placeholder="Enter location" type="text">
+                          </div>
+                          <div class="form-group">
+                            <label for="InputRentPrice">Rent Price</label>
+                            <input class="form-control" id="RentOfNewHouse" placeholder="Enter Rent" type="text">
+                          </div>
+                          <div class="form-group">
+                            <label for="numberPeopleInHouse">Number of People in house Currently</label>
+                            <input class="form-control" id="numberPeopleInHouse"  type="text">
+                          </div>
+                          <div class="form-group">
+                            <label for="InputGender">Gender of Roommate</label>
+                            <input type="checkbox" name="Male" value="Male"> Male
+                            <input type="checkbox" name="Female" value="Female"> Female<br>
+                          </div>
+                          <div class="form-group">
+                            <div class="form-radio">
+                                <label for="InputRentPrice">Number of rooms</label>
+                                <input type="radio" name="NumberOfRoom" value="1+1" checked> 1+1
+                                <input type="radio" name="NumberOfRoom" value="2+1"> 2+1
+                                <input type="radio" name="NumberOfRoom" value="3+1"> 3+1
+                                <input type="radio" name="NumberOfRoom" value="4+1"> 4+1<br>
+                            </div>
+                          </div>
+                          <div class="form-group">
+                            <label for="DescriptionOfHouse">Description</label>
+                            <input class="form-control" id="DescriptionOfHouse" placeholder="You may enter description for house" type="text">
+                          </div>
+                        </form>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Send</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#FindHouseModal">Find House</button>
+
+    <div class="modal fade" id="FindHouseModal" role="dialog">
+        <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Find House</h4>
+                      </div>'
+                      <div class="modal-body">
+                        <form>
+                          <div class="form-group">
+                            <label for="InputLocation">Location</label>
+                            <input class="form-control" id="LocationOfNewHouse" placeholder="Enter location" type="text">
+                          </div>
+                          <div class="form-group">
+                            <label for="InputGender">Gender of Roommate</label>
+                            <input type="checkbox" name="Male" value="Male"> Male
+                            <input type="checkbox" name="Female" value="Female"> Female<br>
+                          </div>
+                          <div class="form-group">
+                            <label for="InputRentPrice">Rent Price Per Person:</label><br>
+                            <input type="checkbox" name="0 - 499" value="Male"> 0 - 499
+                            <input type="checkbox" name="500 - 749" value="Male"> 500 - 749
+                            <input type="checkbox" name="750 - 999" value="Male"> 750 - 999
+                            <input type="checkbox" name="1000+" value="Male"> 1000+<br>
+                          </div>
+                          <div class="form-group">
+                            <div class="form-radio">
+                                 <label for="InputRentPrice">Number of rooms</label>
+                                <input type="radio" name="NumberOfRoom" value="1+1" checked> 1+1
+                                <input type="radio" name="NumberOfRoom" value="2+1"> 2+1
+                                <input type="radio" name="NumberOfRoom" value="3+1"> 3+1
+                                <input type="radio" name="NumberOfRoom" value="4+1"> 4+1<br>
+                            </div>
+                          </div>
+                          <div class="form-group">
+                            <label for="DescriptionOfHouse">Description</label>
+                            <input class="form-control" id="DescriptionOfHouse" placeholder="You may enter description for house" type="text">
+                          </div>
+                        </form>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Send</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+
+
+
+{%endblock %}
