--- a/templates/lost_properties.html
+++ b/templates/lost_properties.html
@@ -1,5 +1,101 @@
 {% extends "layout.html" %}
-{% block title %} Lost{% endblock %}
+{% block title %} Lost - Found{% endblock %}
 {% block content %}
-    <h1>Welcome to my movie collection!</h1>
-{% endblock %}
+    <div>
+        <script src="{{ url_for('static', filename='js/lost_proterties/lost_properties.js') }}"></script>
+    </div>
+
+    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#LostSomethingModal">I lost something</button>
+
+    <div class="modal fade" id="LostSomethingModal" role="dialog">
+        <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Lost Something</h4>
+                      </div>'
+                      <div class="modal-body">
+                        <form>
+                          <div class="form-group">
+                            <label for="InputDescription">Description</label>
+                            <input class="form-control" id="Description" placeholder="Enter Description" type="text">
+                          </div>
+                          <div class="form-group">
+                            <label for="InputPossibleLocation">Possible Location</label>
+                            <input class="form-control" id="PossibleLocation" placeholder="Enter possible location" type="text">
+                          </div>
+                          <div class="form-group">
+                            <label for="date">Possible date of losing</label>
+                            <input type="date" format="dd/mm/yyyy" name="date" value="date"><br>
+                          </div>
+                          <div class="form-group">
+                            <label for="OwnerName">Name of Owner</label>
+                            <input class="form-control" id="OwnerName" placeholder="Enter Name" type="text">
+                          </div>
+                          <div class="form-group">
+                            <label for="OwnerMail">e-Mail of Owner</label>
+                            <input class="form-control" id="OwnerMail" placeholder="Enter e-Mail" type="text">
+                          </div>
+                          <div class="form-group">
+                            <label for="OwnerPhone">Phone Number of Owner</label>
+                            <input class="form-control" id="OwnerPhone" placeholder="Enter phone number" type="text">
+                          </div>
+                        </form>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Send</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#FoundSomethingModal">I found something</button>
+
+    <div class="modal fade" id="FoundSomethingModal" role="dialog">
+        <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Found Something</h4>
+                      </div>'
+                      <div class="modal-body">
+                        <form>
+                          <div class="form-group">
+                            <label for="InputDescription">Description</label>
+                            <input class="form-control" id="Description" placeholder="Enter description" type="text">
+                          </div>
+                          <div class="form-group">
+                            <label for="InputCurrentLocation">Current Location</label>
+                            <input class="form-control" id="CurrentLocation" placeholder="Enter current location" type="text">
+                          </div>
+                          <div class="form-group">
+                            <label for="date">Date of finding</label>
+                            <input type="date" format="dd/mm/yyyy" name="Date" value="date"><br>
+                          </div>
+                          <div class="form-group">
+                            <label for="FinderName">Name of person who found</label>
+                            <input class="form-control" id="FinderName" placeholder="Enter Name" type="text">
+                          </div>
+                          <div class="form-group">
+                            <label for="FinderMail">e-Mail of person who found</label>
+                            <input class="form-control" id="Finder" placeholder="Enter e-Mail" type="text">
+                          </div>
+                          <div class="form-group">
+                            <label for="FinderPhone">Phone Number of person who found</label>
+                            <input class="form-control" id="FinderPhone" placeholder="Enter phone number" type="text">
+                          </div>
+                        </form>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Send</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+
+
+
+{%endblock %}
