--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,7 +23,7 @@
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-    <a class="navbar-brand" href="yedekIndex.html">ITUHelper</a>
+    <a class="navbar-brand" href="{{ url_for('site.HomePage') }}">ITUHelper</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -35,8 +35,8 @@
             <span class="nav-link-text">Dashboard</span>
           </a>
         </li>
-        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
-          <a class="nav-link" href="house_announcement.html">
+        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="HouseMate">
+          <a class="nav-link" href="{{ url_for('site.HousePage') }}">
             <i class="fa fa-fw fa-area-chart"></i>
             <span class="nav-link-text">HouseMate</span>
           </a>
