--- a/templates/login-test.html
+++ b/templates/login-test.html
@@ -5,6 +5,23 @@
   <title>Title</title>
 </head>
 <body>
+ <form action="" method="post">
+          <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input class="form-control" id="exampleInputEmail1" name="exampleInputEmail1" type="email" aria-describedby="emailHelp" placeholder="Enter email">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input class="form-control" id="exampleInputPassword1" type="password" placeholder="Password">
+          </div>
+          <div class="form-group">
+            <div class="form-check">
+              <label class="form-check-label">
+                <input class="form-check-input" type="checkbox"> Remember Password</label>
+            </div>
+          </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
 
+ </form>
 </body>
 </html>
