--- a/templates/login.html
+++ b/templates/login.html
@@ -39,7 +39,7 @@
           <a class="btn btn-primary btn-block" href="{{ url_for('site.HomePage') }}">Login</a>
         </form>
         <div class="text-center">
-          <a class="d-block small mt-3" href="register.html">Register an Account</a>
+          <a class="d-block small mt-3" href={{ url_for('site.SignUpPage') }}>Register an Account</a>
           <a class="d-block small" href="forgot-password.html">Forgot Password?</a>
         </div>
       </div>
