game_friends.html file created

--- a/templates/house_announcement.html
+++ b/templates/house_announcement.html
@@ -13,7 +13,7 @@
                       <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <h4 class="modal-title">Share House</h4>
-                      </div>'
+                      </div>
                       <div class="modal-body">
                         <form>
                           <div class="form-group">
@@ -64,7 +64,7 @@
                       <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <h4 class="modal-title">Find House</h4>
-                      </div>'
+                      </div>
                       <div class="modal-body">
                         <form>
                           <div class="form-group">
