--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,16 +35,22 @@
             <span class="nav-link-text">Dashboard</span>
           </a>
         </li>
+        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
+          <a class="nav-link" href="tables.html">
+            <i class="fa fa-fw fa-table"></i>
+            <span class="nav-link-text">Tables</span>
+          </a>
+        </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="HouseMate">
           <a class="nav-link" href="{{ url_for('site.HousePage') }}">
             <i class="fa fa-fw fa-area-chart"></i>
             <span class="nav-link-text">HouseMate</span>
           </a>
         </li>
-        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
-          <a class="nav-link" href="tables.html">
-            <i class="fa fa-fw fa-table"></i>
-            <span class="nav-link-text">Tables</span>
+        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Lost-Found">
+          <a class="nav-link" href="{{ url_for('site.PropertyPage') }}">
+            <i class="fa fa-fw fa-area-chart"></i>
+            <span class="nav-link-text">Lost-Found Stuff</span>
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
