--- a/templates/game_friends.html
+++ b/templates/game_friends.html
@@ -2,106 +2,65 @@
 {% block title %} Announcements{% endblock %}
 {% block content %}
 
-    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#ShareHouseModal">Share House</button>
+    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#GameAnnouncement">Game Announcement</button>
 
-    <div class="modal fade" id="ShareHouseModal" role="dialog">
-        <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Share House</h4>
-                      </div>
-                      <div class="modal-body">
-                        <form>
-                          <div class="form-group">
-                            <label for="InputLocation">Location</label>
-                            <input class="form-control" id="LocationOfNewHouse" placeholder="Enter location" type="text">
-                          </div>
-                          <div class="form-group">
-                            <label for="InputRentPrice">Rent Price</label>
-                            <input class="form-control" id="RentOfNewHouse" placeholder="Enter Rent" type="text">
-                          </div>
-                          <div class="form-group">
-                            <label for="numberPeopleInHouse">Number of People in house Currently</label>
-                            <input class="form-control" id="numberPeopleInHouse"  type="text">
-                          </div>
-                          <div class="form-group">
-                            <label for="InputGender">Gender of Roommate</label>
-                            <input type="checkbox" name="Male" value="Male"> Male
-                            <input type="checkbox" name="Female" value="Female"> Female<br>
-                          </div>
-                          <div class="form-group">
-                            <div class="form-radio">
-                                <label for="InputRentPrice">Number of rooms</label>
-                                <input type="radio" name="NumberOfRoom" value="1+1" checked> 1+1
-                                <input type="radio" name="NumberOfRoom" value="2+1"> 2+1
-                                <input type="radio" name="NumberOfRoom" value="3+1"> 3+1
-                                <input type="radio" name="NumberOfRoom" value="4+1"> 4+1<br>
-                            </div>
-                          </div>
-                          <div class="form-group">
-                            <label for="DescriptionOfHouse">Description</label>
-                            <input class="form-control" id="DescriptionOfHouse" placeholder="You may enter description for house" type="text">
-                          </div>
-                        </form>
-                      </div>
-                      <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Send</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+	<div class="modal fade" id="GameAnnouncement" role="dialog">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+					<h4 class="modal-title">Game Announcement</h4>
+				</div>
+				<div class="modal-body">
+					<form method="POST" action="/game_friends" name="gameAnnounceForm">
 
-    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#FindHouseModal">Find House</button>
+						<div class="form-group">
+							<label for="InputGameName">Game Name</label>
+							<input class="form-control" id="InputGameName" placeholder="Enter Game Name" type="text" required>
+						</div>
 
-    <div class="modal fade" id="FindHouseModal" role="dialog">
-        <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Find House</h4>
-                      </div>
-                      <div class="modal-body">
-                        <form>
-                          <div class="form-group">
-                            <label for="InputLocation">Location</label>
-                            <input class="form-control" id="LocationOfNewHouse" placeholder="Enter location" type="text">
-                          </div>
-                          <div class="form-group">
-                            <label for="InputGender">Gender of Roommate</label>
-                            <input type="checkbox" name="Male" value="Male"> Male
-                            <input type="checkbox" name="Female" value="Female"> Female<br>
-                          </div>
-                          <div class="form-group">
-                            <label for="InputRentPrice">Rent Price Per Person:</label><br>
-                            <input type="checkbox" name="0 - 499" value="Male"> 0 - 499
-                            <input type="checkbox" name="500 - 749" value="Male"> 500 - 749
-                            <input type="checkbox" name="750 - 999" value="Male"> 750 - 999
-                            <input type="checkbox" name="1000+" value="Male"> 1000+<br>
-                          </div>
-                          <div class="form-group">
-                            <div class="form-radio">
-                                 <label for="InputRentPrice">Number of rooms</label>
-                                <input type="radio" name="NumberOfRoom" value="1+1" checked> 1+1
-                                <input type="radio" name="NumberOfRoom" value="2+1"> 2+1
-                                <input type="radio" name="NumberOfRoom" value="3+1"> 3+1
-                                <input type="radio" name="NumberOfRoom" value="4+1"> 4+1<br>
-                            </div>
-                          </div>
-                          <div class="form-group">
-                            <label for="DescriptionOfHouse">Description</label>
-                            <input class="form-control" id="DescriptionOfHouse" placeholder="You may enter description for house" type="text">
-                          </div>
-                        </form>
-                      </div>
-                      <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Send</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+						<div class="form-group">
+							<div class="form-radio">
+								<label for="InputGameType">Game Type</label> <br>
+								<input type="radio" name="InputGameType" value="VideoGame" checked> Video Game
+								<input type="radio" name="InputGameType" value="TableGame"> Table Game
+								<input type="radio" name="InputGameType" value="SportGame"> Sport Game
+								<input type="radio" name="InputGameType" value="Other"> Other <br>
+							</div>
+						</div>
+
+						<div class="form-group">
+							<label for="GamePlayerNo">Player Number</label>
+							<input class="form-control" id="GamePlayerNo" placeholder="Number of players required" type="text">
+						</div>
+
+
+						<div class="form-group">
+							<label for="InputGameDate">Game Date</label>
+							<input class="form-control" id="InputGameDate" placeholder="Enter Game Date(yyyy-mm-dd)" type="text">
+						</div>
+
+						<div class="form-group">
+							<label for="InputGameLocation">Game Location</label>
+							<input class="form-control" id="InputGameLocation" placeholder="Enter Game Location" type="text">
+						</div>
+
+						<div class="form-group">
+							<label for="GameDescription">Description</label>
+							<input class="form-control" id="GameDescription" placeholder="Details about game announcement" type="text">
+						</div>
+
+						<button type="submit" class="btn btn-default" data-dismiss="modal" id="buttonSend">Send</button>
+
+					</form>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+
+				</div>
+			</div>
+		</div>
+	</div>
 
 
 
