--- a/templates/game_friends.html
+++ b/templates/game_friends.html
@@ -12,52 +12,50 @@
 					<h4 class="modal-title">Game Announcement</h4>
 				</div>
 				<div class="modal-body">
-					<form method="POST" action="/game_friends" name="gameAnnounceForm">
+					<form method="POST" action="" name="gameAnnounceForm" role="form">
 
 						<div class="form-group">
 							<label for="InputGameName">Game Name</label>
-							<input class="form-control" id="InputGameName" placeholder="Enter Game Name" type="text" required>
+							<input class="form-control" name="InputGameName" id="InputGameName" placeholder="Enter Game Name" type="text" required>
 						</div>
 
 						<div class="form-group">
 							<div class="form-radio">
 								<label for="InputGameType">Game Type</label> <br>
-								<input type="radio" name="InputGameType" value="VideoGame" checked> Video Game
-								<input type="radio" name="InputGameType" value="TableGame"> Table Game
-								<input type="radio" name="InputGameType" value="SportGame"> Sport Game
+								<input type="radio" name="InputGameType" value="Video Game" checked> Video Game
+								<input type="radio" name="InputGameType" value="Table Game"> Table Game
+								<input type="radio" name="InputGameType" value="Sport Game"> Sport Game
 								<input type="radio" name="InputGameType" value="Other"> Other <br>
 							</div>
 						</div>
 
 						<div class="form-group">
 							<label for="GamePlayerNo">Player Number</label>
-							<input class="form-control" id="GamePlayerNo" placeholder="Number of players required" type="text">
+							<input class="form-control" name="GamePlayerNo" id="GamePlayerNo" placeholder="Number of players required" type="number" required>
 						</div>
 
 
 						<div class="form-group">
 							<label for="InputGameDate">Game Date</label>
-							<input class="form-control" id="InputGameDate" placeholder="Enter Game Date(yyyy-mm-dd)" type="text">
+							<input class="form-control" name="InputGameDate" id="InputGameDate" placeholder="Enter Game Date(yyyy-mm-dd)" type="text">
 						</div>
 
 						<div class="form-group">
 							<label for="InputGameLocation">Game Location</label>
-							<input class="form-control" id="InputGameLocation" placeholder="Enter Game Location" type="text">
+							<input class="form-control" name="InputGameLocation" id="InputGameLocation" placeholder="Enter Game Location" type="text">
 						</div>
 
 						<div class="form-group">
 							<label for="GameDescription">Description</label>
-							<input class="form-control" id="GameDescription" placeholder="Details about game announcement" type="text">
+							<input class="form-control" name="GameDescription" id="GameDescription" placeholder="Details about game announcement" type="text">
 						</div>
 
-						<button type="submit" class="btn btn-default" data-dismiss="modal" id="buttonSend">Send</button>
+						<button type="submit" class="btn btn-default" id="buttonSend">Send</button>
+						<button type="reset" class="btn btn-default" id="buttonReset">Reset</button>
 
 					</form>
 				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 
-				</div>
 			</div>
 		</div>
 	</div>
