--- a/templates/layout.html
+++ b/templates/layout.html
@@ -53,6 +53,12 @@
             <span class="nav-link-text">Lost-Found Stuff</span>
           </a>
         </li>
+	    <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Game Friend">
+          <a class="nav-link" href="{{ url_for('site.GameFriendPage') }}">
+            <i class="fa fa-fw fa-area-chart"></i>
+            <span class="nav-link-text">Game Friend Finder</span>
+          </a>
+        </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
           <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents" data-parent="#exampleAccordion">
             <i class="fa fa-fw fa-wrench"></i>
