--- a/templates/login.html
+++ b/templates/login.html
@@ -21,14 +21,14 @@
     <div class="card card-login mx-auto mt-5">
       <div class="card-header">Login</div>
       <div class="card-body">
-        <form>
+        <form action="" method="POST">
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
-            <input class="form-control" id="exampleInputEmail1" type="email" aria-describedby="emailHelp" placeholder="Enter email">
+            <input class="form-control" name="login_email" id="login_email" type="text" aria-describedby="emailHelp" placeholder="Enter email">
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
-            <input class="form-control" id="exampleInputPassword1" type="password" placeholder="Password">
+            <input class="form-control" name="login_password" id="login_password" type="password" placeholder="Password">
           </div>
           <div class="form-group">
             <div class="form-check">
@@ -36,7 +36,7 @@
                 <input class="form-check-input" type="checkbox"> Remember Password</label>
             </div>
           </div>
-          <a class="btn btn-primary btn-block" href="{{ url_for('site.HomePage') }}">Login</a>
+          <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
         </form>
         <div class="text-center">
           <a class="d-block small mt-3" href={{ url_for('site.SignUpPage') }}>Register an Account</a>
