--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
 {% block title %} Home{% endblock %}
 {% block content %}
-    <h1>Welcome to my movie collection!</h1>
+    <h1>Welcome to ITUHelper!</h1>
 {% endblock %}
