--- a/templates/lost_found.html
+++ b/templates/lost_found.html
@@ -2,7 +2,7 @@
 {% block title %} Lost - Found{% endblock %}
 {% block content %}
     <div>
-        <script src="{{ url_for('static', filename='js/lost_proterties/lost_properties.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/lost_found/lost_found.js') }}"></script>
     </div>
 
     <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#LostSomethingModal">I lost something</button>
@@ -13,7 +13,7 @@
                       <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <h4 class="modal-title">Lost Something</h4>
-                      </div>'
+                      </div>
                       <div class="modal-body">
                         <form>
                           <div class="form-group">
@@ -58,7 +58,7 @@
                       <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <h4 class="modal-title">Found Something</h4>
-                      </div>'
+                      </div>
                       <div class="modal-body">
                         <form>
                           <div class="form-group">
