fixed issue in house announcement page
fixed radio button issue that causes multiple selection in radio buttons in house announcement page

--- a/templates/house_announcement.html
+++ b/templates/house_announcement.html
@@ -35,8 +35,8 @@
                         <div class="form-group">
                             <div class="form-radio">
                                 <label for="InputGenderforSharingHouse">Gender of HouseMate: </label>
-                                <input type="radio" name="Male" value="Male"> Male
-                                <input type="radio" name="Female" value="Female"> Female<br>
+                                <input type="radio" name="InputGenderforSharingHouse" value="Male"> Male
+                                <input type="radio" name="InputGenderforSharingHouse" value="Female"> Female<br>
                             </div>
                         </div>
 
