--- a/templates/game_friends.html
+++ b/templates/game_friends.html
@@ -31,7 +31,7 @@
 
 						<div class="form-group">
 							<label for="GamePlayerNo">Player Number</label>
-							<input class="form-control" name="GamePlayerNo" id="GamePlayerNo" placeholder="Number of players required" type="number" required>
+							<input class="form-control" name="GamePlayerNo" id="GamePlayerNo" placeholder="Number of players required" type="number" min="0" required>
 						</div>
 
 
