try  input share house announcement page

--- a/templates/house_announcement.html
+++ b/templates/house_announcement.html
@@ -28,8 +28,8 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="numberOfPeopleInHouse">Number of People in house Currently</label>
-                            <input class="form-control" name = "numberOfPeopleInHouse" id="numberOfPeopleInHouse" type="text" required>
+                            <label for="InputnumberOfPeopleInSharingHouse">Number of People in house Currently</label>
+                            <input class="form-control" name = "InputnumberOfPeopleInHouse" id="InputnumberOfPeopleInSharingHouse" type="text" required>
                         </div>
 
                         <div class="form-group">
@@ -42,17 +42,17 @@
 
                         <div class="form-group">
                             <div class="form-radio">
-                                <label for="NumberOfRoom">Number of rooms</label>
-                                <input type="radio" name="NumberOfRoom" value="1+1" checked> 1+1
-                                <input type="radio" name="NumberOfRoom" value="2+1"> 2+1
-                                <input type="radio" name="NumberOfRoom" value="3+1"> 3+1
-                                <input type="radio" name="NumberOfRoom" value="4+1"> 4+1<br>
+                                <label for="InputNumberOfRoomforSharingHouse">Number of rooms</label>
+                                <input type="radio" name="InputNumberOfRoomforSharingHouse" value="1+1" checked> 1+1
+                                <input type="radio" name="InputNumberOfRoomforSharingHouse" value="2+1"> 2+1
+                                <input type="radio" name="InputNumberOfRoomforSharingHouse" value="3+1"> 3+1
+                                <input type="radio" name="InputNumberOfRoomforSharingHouse" value="4+1"> 4+1<br>
                             </div>
                           </div>
 
                           <div class="form-group">
-                            <label for="DescriptionOfSharingHouse">Description</label>
-                            <input class="form-control" name = "DescriptionOfSharingHouse" id="DescriptionOfSharingHouse" placeholder="You may enter description for house" type="text">
+                            <label for="InputDescriptionOfSharingHouse">Description</label>
+                            <input class="form-control" name = "InputDescriptionOfSharingHouse" id="InputDescriptionOfSharingHouse" placeholder="You may enter description for house" type="text">
                           </div>
 
                         </form>
@@ -67,7 +67,7 @@
 
     <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#SSearchingHouseAnnouncementModal">Find House</button>
 
-    <div class="modal fade" id="SSearchingHouseAnnouncementModal" role="dialog">
+    <div class="modal fade" id="SearchingHouseAnnouncementModal" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -83,7 +83,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="InputGenderforSharingHouse">Gender of Roommate</label>
+                            <label for="InputGenderforSearchingHouse">Gender of Roommate</label>
                             <input type="checkbox" name="Male" value="Male"> Male
                             <input type="checkbox" name="Female" value="Female"> Female<br>
                           </div>
@@ -99,8 +99,8 @@
                         </div>
 
                           <div class="form-group">
-                            <label for="DescriptionOfSearchingHouse">Description</label>
-                            <input class="form-control" name = "DescriptionOfSearchingHouse" id="DescriptionOfSearchingHouse" placeholder="You may enter description for house" type="text"required>
+                            <label for="InputDescriptionOfSearchingHouse">Description</label>
+                            <input class="form-control" name = "InputDescriptionOfSearchingHouse" id="InputDescriptionOfSearchingHouse" placeholder="You may enter description for house" type="text"required>
                           </div>
                         </form>
                       </div>
