fixed homepage and login
removed login requirement in game_friends page
fixed words in login page

--- a/templates/login.html
+++ b/templates/login.html
@@ -36,7 +36,7 @@
                 <input class="form-check-input" type="checkbox"> Remember Password</label>
             </div>
           </div>
-          <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
+          <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         </form>
         <div class="text-center">
           <a class="d-block small mt-3" href={{ url_for('site.SignUpPage') }}>Register an Account</a>
