--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,7 +29,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
-        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
+        <!--<li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
           <a class="nav-link" href="yedekIndex.html">
             <i class="fa fa-fw fa-dashboard"></i>
             <span class="nav-link-text">Dashboard</span>
@@ -40,7 +40,7 @@
             <i class="fa fa-fw fa-table"></i>
             <span class="nav-link-text">Tables</span>
           </a>
-        </li>
+        </li>-->
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="HouseMate">
           <a class="nav-link" href="{{ url_for('site.HousePage') }}">
             <i class="fa fa-fw fa-area-chart"></i>
