fixed shared house page
fixed methods and form information in shared house page

--- a/templates/house_announcement.html
+++ b/templates/house_announcement.html
@@ -54,12 +54,9 @@
                             <label for="InputDescriptionOfSharingHouse">Description</label>
                             <input class="form-control" name = "InputDescriptionOfSharingHouse" id="InputDescriptionOfSharingHouse" placeholder="You may enter description for house" type="text">
                           </div>
-
+                          <button type="reset">Reset</button>
+                          <button type="submit" formmethod="POST">Send</button>
                         </form>
-                      </div>
-                      <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Send</button>
                       </div>
                     </div>
                   </div>
@@ -102,11 +99,9 @@
                             <label for="InputDescriptionOfSearchingHouse">Description</label>
                             <input class="form-control" name = "InputDescriptionOfSearchingHouse" id="InputDescriptionOfSearchingHouse" placeholder="You may enter description for house" type="text"required>
                           </div>
+                          <button type="reset">Reset</button>
+                          <button type="submit" formmethod="POST">Send</button>
                         </form>
-                      </div>
-                      <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Send</button>
                       </div>
                     </div>
                   </div>
