fix problem that input from two modal

--- a/templates/house_announcement.html
+++ b/templates/house_announcement.html
@@ -75,7 +75,7 @@
                         <input type="hidden" name="form-name" value="SearchingHouseAnnouncement">
                         <div class="form-group">
                             <label for="InputLocationOfSearchingHouse">Location</label>
-                            <input class="form-control" id="InputLocationOfSearchingHouse" placeholder="Enter location" type="text" required>
+                            <input class="form-control" name = "InputLocationOfSearchingHouse" id="InputLocationOfSearchingHouse" placeholder="Enter location" type="text" required>
                         </div>
 
                         <div class="form-radio">
