Date input's type and value attributes are changed to "date"

--- a/templates/game_friends.html
+++ b/templates/game_friends.html
@@ -37,7 +37,7 @@
 
 						<div class="form-group">
 							<label for="InputGameDate">Game Date</label>
-							<input class="form-control" name="InputGameDate" id="InputGameDate" placeholder="Enter Game Date(yyyy-mm-dd)" type="text">
+							<input class="form-control" name="InputGameDate" id="InputGameDate" type="date" value="date">
 						</div>
 
 						<div class="form-group">
