Login page view is fixed

--- a/templates/login.html
+++ b/templates/login.html
@@ -23,12 +23,12 @@
       <div class="card-body">
         <form action="" method="POST">
           <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input class="form-control" name="login_email" id="login_email" type="text" aria-describedby="emailHelp" placeholder="Enter email">
+            <label for="exampleInputEmail1">Username</label>
+            <input class="form-control" name="login_username" id="login_username" type="text" aria-describedby="emailHelp" placeholder="Enter username">
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
-            <input class="form-control" name="login_password" id="login_password" type="password" placeholder="Password">
+            <input class="form-control" name="login_password" id="login_password" type="password" placeholder="Enter password">
           </div>
           <div class="form-group">
             <div class="form-check">
