seperated lost and found stuff pages
lost stuff and found stuff pages are now seperate
also added collapsable menu to right navigation bar for this pages

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -41,11 +41,19 @@
 					  <span class="nav-link-text">HouseMate</span>
 				  </a>
 			  </li>
-			  <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Lost-Found">
-				  <a class="nav-link" href="{{ url_for('site.PropertyPage') }}">
-					  <i class="fa fa-fw fa-area-chart"></i>
+			  <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Lost-Found Stuff">
+				  <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseExamplePages" data-parent="#exampleAccordion">
+					  <i class="fa fa-fw fa-file"></i>
 					  <span class="nav-link-text">Lost-Found Stuff</span>
 				  </a>
+				  <ul class="sidenav-second-level collapse" id="collapseExamplePages">
+					  <li>
+						  <a href="{{ url_for('site.LostStuff') }}">I Lost Something</a>
+					  </li>
+					  <li>
+						  <a href="{{ url_for('site.FoundStuff') }}">I Found Something</a>
+					  </li>
+				  </ul>
 			  </li>
 			  <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Game Friend">
 				  <a class="nav-link" href="{{ url_for('site.GameFriendPage') }}">
@@ -70,26 +78,6 @@
 					      <i class="fa fa-fw fa-area-chart"></i>
 					      <span class="nav-link-text">Add Restaurant</span>
 				      </a>
-					  </li>
-				  </ul>
-			  </li>
-			  <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Example Pages">
-				  <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseExamplePages" data-parent="#exampleAccordion">
-					  <i class="fa fa-fw fa-file"></i>
-					  <span class="nav-link-text">Example Pages</span>
-				  </a>
-				  <ul class="sidenav-second-level collapse" id="collapseExamplePages">
-					  <li>
-						  <a href="login.html">Login Page</a>
-					  </li>
-					  <li>
-						  <a href="register.html">Registration Page</a>
-					  </li>
-					  <li>
-						  <a href="forgot-password.html">Forgot Password Page</a>
-					  </li>
-					  <li>
-						  <a href="blank.html">Blank Page</a>
 					  </li>
 				  </ul>
 			  </li>
