fixed displaying current directory
it displays home page as a link and current page name as text at top of page

--- a/templates/found_stuff.html
+++ b/templates/found_stuff.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Found{% endblock %}
+{% block title %} Found Stuff{% endblock %}
 {% block content %}
     <div>
         <script src="{{ url_for('static', filename='js/lost_found/lost_found.js') }}"></script>
