--- a/templates/lost_stuff.html
+++ b/templates/lost_stuff.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %} Lost{% endblock %}
+{% block title %} Lost Stuff{% endblock %}
 {% block content %}
     <div>
         <script src="{{ url_for('static', filename='js/lost_found/lost_found.js') }}"></script>
