--- a/templates/found_stuff.html
+++ b/templates/found_stuff.html
@@ -48,8 +48,22 @@
                     </div>
         </div>
     </div>
-
-
-
-
+    {% if founditems %}
+        <table style="width:120%">
+            <tr>
+                <th>Description</th>
+                <th>Current Location</th>
+                <th>Date of Finding(YEAR-MONTH-DAY)</th>
+            </tr>
+            {% for item in founditems %}
+                <tr>
+                    <td>{{ item[0] }}</td>
+                    <td>{{ item[1] }}</td>
+                    <td>{{ item[2] }}</td>
+                </tr>
+            {% endfor %}
+        </table>
+    {% else %}
+        <p>There are no items.</p>
+    {% endif %}
 {%endblock %}
