edit searching house announcement page

--- a/templates/sharedmyhouse_announcement.html
+++ b/templates/sharedmyhouse_announcement.html
@@ -81,14 +81,13 @@
                                     <div class="modal-body">
                                         <label>Owner of Announcement</label>
                                          <p>{{ item[5]}} {{ item[6] }}</p>
-                                        <label>Description of House</label>
+                                        <label>Description of House Criteria</label>
                                         <p>{{ item[4] }}</p>
                                     </div>
                                 </div>
                         </div>
                         </div>
                     </td>
-
                 </tr>
             {% endfor %}
         </table>
