--- a/templates/searchedhouse_announcement.html
+++ b/templates/searchedhouse_announcement.html
@@ -40,25 +40,59 @@
         </div>
 
 {% if ALLSearchedHouse %}
-        <table style="width:100%">
+        <table id = "SharingHouseAnnouncementTable" class="table table-bordered dataTable" role="grid" aria-describedby="dataTable_info" style="width:100%" cellspacing="0">
             <tr>
-                <th>NO</th>
-                <th>LOCATION</th>
-                <th>MINRENTPRICE</th>
-                <th>MAXRENTPRICE</th>
-                <th>DESCRIPTION</th>
-                <th>NAME</th>
-                <th>SURNAME</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Position: activate to sort column ascending">LOCATION</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Position: activate to sort column ascending">MIN RENT PRICE</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Position: activate to sort column ascending">MAX RENT PRICE</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 165.333px;" aria-label="Position: activate to sort column ascending">DESCRIPTION</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 165.333px;" aria-label="Position: activate to sort column ascending">OWNER OF ANNOUNCEMENT</th>
+
             </tr>
             {% for item in ALLSearchedHouse %}
                 <tr>
                     <td>{{ item[0] }}</td>
                     <td>{{ item[1] }}</td>
                     <td>{{ item[2] }}</td>
-                    <td>{{ item[3] }}</td>
-                    <td>{{ item[4] }}</td>
-                    <td>{{ item[5] }}</td>
-                    <td>{{ item[6] }}</td>
+                    <td>
+                        <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#DescriptionModal">Description</button>
+                        <div class="modal fade" id="DescriptionModal" role="dialog">
+                             <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                        <h4 class="modal-title">Description</h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        <label>Description of House Criteria</label>
+                                        <p>{{ item[3] }}</p>
+                                    </div>
+                                </div>
+                             </div>
+                        </div>
+                    </td>
+                    <td>
+                       <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#profileOfOwnerAd">Profile</button>
+                         <div class = "modal fade" id = "profileOfOwnerAd" role ="dialog">
+                             <div class = "modal-dialog">
+                                 <div class = "modal-content">
+                                         <div class="modal-header">
+                                             <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                             <h4 class="modal-title">Profile</h4>
+                                         </div>
+                                         <div class = "modal-body">
+                                             <label>NAME and SURNAME</label>
+                                             <p>{{ item[4] }} {{ item[5] }}</p>
+                                             <label>EMAIL</label>
+                                             <p>{{ item[6] }}</p>
+                                             <label>FACULTY</label>
+                                             <p>{{ item[7] }} - {{ item[8] }}</p>
+                                         </div>
+                                     </div>
+                                 </div>
+                             </div>
+                    </td>
+
                 </tr>
             {% endfor %}
         </table>
