--- a/templates/sharedmyhouse_announcement.html
+++ b/templates/sharedmyhouse_announcement.html
@@ -57,10 +57,11 @@
             <thead>
                 <tr role = "row">
                     <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="Position: activate to sort column ascending">LOCATION</th>
-                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="Position: activate to sort column ascending">RENTPRICE</th>
-                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="Position: activate to sort column ascending">NUMBEROFPEOPLE</th>
-                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="Position: activate to sort column ascending">NUMBEROFROOM</th>
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="Position: activate to sort column ascending">RENT PRICE </th>
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="Position: activate to sort column ascending">NUMBER OF PEOPLE</th>
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="Position: activate to sort column ascending">NUMBER OF ROOM</th>
                     <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="Position: activate to sort column ascending">DESCRIPTION</th>
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="Position: activate to sort column ascending"> OWNER OF ANNOUNCEMENT</th>
                 </tr>
             </thead>
             {% for item in ALLSharingHouse %}
@@ -70,7 +71,7 @@
                     <td>{{ item[2] }}</td>
                     <td>{{ item[3] }}</td>
                     <td>
-                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#DescriptionModal">Description</button>
+                        <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#DescriptionModal">Description</button>
                         <div class="modal fade" id="DescriptionModal" role="dialog">
                              <div class="modal-dialog">
                                 <div class="modal-content">
@@ -79,13 +80,33 @@
                                         <h4 class="modal-title">Description</h4>
                                     </div>
                                     <div class="modal-body">
-                                        <label>Owner of Announcement</label>
-                                         <p>{{ item[5]}} {{ item[6] }}</p>
+
                                         <label>Description of House Criteria</label>
                                         <p>{{ item[4] }}</p>
                                     </div>
                                 </div>
+                            </div>
                         </div>
+                    </td>
+                    <td>
+                        <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#profileOfOwnerAd">Profile</button>
+                        <div class="modal fade" id="profileOfOwnerAd" role="dialog">
+                             <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                        <h4 class="modal-title">Profile</h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        <label>NAME and SURNAME</label>
+                                        <p>{{ item[5] }} {{ item[6] }}</p>
+                                        <label>EMAIL</label>
+                                        <p>{{ item[7] }}</p>
+                                        <label>FACULTY</label>
+                                        <p>{{ item[8] }} - {{ item[9] }}</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </td>
                 </tr>
